# skit

./: LICENSE  README.md  pyproject.toml
.github/workflows/: docs.yml
docs/: mkdocs.yml
docs/src/: index.md
docs/src/core/: architecture.md  attributes.md  concepts.md  graph.md  syllabus.md
docs/src/extensions/: assessment.md  literature.md
docs/src/javascripts/: plots.js
docs/src/stylesheets/: extra.css
skit/: app.py
skit/core/: extensions.py  graph.py  storage.py  syllabus.py  types.py  utils.py
skit/extensions/assessment/: __init__.py
skit/extensions/literature/: __init__.py
skit/tests/: test_storage.py  test_types.py  test_utils.py
skit/ui/: cli.py
