[project]
name = "skit"
version = "0.1.0"
description = "A tool for building study plans and learning programs"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "networkx>=3.6.1",
    "pydantic>=2.13.4",
    "rich>=15.0.0",
    "typer>=0.27.0",
]

[tool.uv]
default-groups = ["dev"]

[tool.pytest.ini_options]
testpaths = ["skit/tests"]

[tool.ruff]
src = ["skit"]

[dependency-groups]
dev = [
    "hypothesis>=6.161.0",
    "pyright>=1.1.411",
    "pytest>=9.1.1",
    "ruff>=0.15.22",
]
docs = [
    "mkdocs-material>=9.5",
    "pymdown-extensions>=10",
]
